--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -1,11 +1,3 @@
-### 部署
-参数信息
-- port : conversions服务端口，默认监听8080
-- address : 萤火虫接收数据的地址
-- alertId : 萤火虫告警id
-- alertKey : 萤火虫告警key
-- applyType : 是否是预置告警，custom:自定义告警，preset:预置告警。默认custom
-```yaml
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -25,7 +17,7 @@ spec:
     spec:
       containers:
         - name: container-5kese9
-          image: 'kubesphere/conversions:v0.5'
+          image: 'birdhk/conversions:v0.2'
           args:
             - >-
               --address=http://10.27.0.33:1980/thirdalert/v1/firefly/thirdpartyAlert/process
@@ -66,18 +58,3 @@ spec:
   selector:
     app: conversions
   type: ClusterIP
-```
-修改alertmanager的配置，修改 kubesphere-monitoring-system namespace下的 alertmanager-main secret 配置
-```text
-"receivers":
-- "name": "conversions"
-  "webhook_configs":
-  - "url": "http://conversions-svc.kubesphere-monitoring-system.svc:8080/alert"
-  
-"route":
-  "routes":
-  - "match_re":
-      "alerttype": ".*"
-    "receiver": "conversions"
-  	"continue": true
-```
